# flask-base

./: .gitlab-ci.yml  Dockerfile  Dockerfile-production  LICENSE  Pipfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
app/: __init__.py  config.py
app/api/: views.py
app/main/: views.py
app/templates/main/: base.html  home.html
app/tests/: conftest.py
app/tests/api/: test_views.py
app/tests/main/: test_views.py
docker/: Dockerfile-web
