[tool.poetry]
name = "flask-base"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.3"
flask-restx = "^1.1.0"
flask-sqlalchemy = "^3.1.1"
flask-marshmallow = "^0.15.0"
marshmallow-sqlalchemy = "^0.29.0"
flask-migrate = "^4.0.5"
flask-caching = "^2.1.0"
python-dotenv = "^1.0.0"
flask-bcrypt = "^1.0.1"
flask-login = {git = "https://github.com/maxcountryman/flask-login.git"}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
pytest-cov = "^4.1.0"
doc8 = "^1.1.1"
flake8 = "^6.1.0"
black = "^23.9.1"
isort = "^5.12.0"
pytest-flask = "^1.2.0"
pytest-factoryboy = "^2.5.1"
hypothesis = "^6.87.3"
pre-commit = "^3.4.0"
ipython = "^8.16.1"
tox-pipenv = "^1.10.1"
pytest-socket = "^0.6.0"
mypy = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
